[CHG] 修改一处错误配置

--- a/server/src/db_proxy_server/dbproxyserver.conf
+++ b/server/src/db_proxy_server/dbproxyserver.conf
@@ -28,7 +28,7 @@ CacheInstances=unread,group_set,token,sync,group_member
 unread_host=127.0.0.1
 unread_port=6370
 unread_db=1
-unread_db_maxconncnt=16
+unread_maxconncnt=16
 
 #群组设置redis
 group_set_host=127.0.0.1
